tests/reject/variadic_spread_nonvariadic.ty
fn f(x: int) -> int:
    return x
fn main():
    a := [1,2]
    print(str(f(a...)))
